[package]
name = "DevDock"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.35.0"
egui_extras = { version = "0.35.0", features = ["svg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.build-dependencies]
ico = "0.5"
resvg = "0.45"
winresource = "0.1"
