[package]
name = "DevDock"
version = "0.2.0"
edition = "2024"

[dependencies]
eframe = "0.35.0"
egui_extras = { version = "0.35.0", features = ["svg"] }
portable-pty = "0.9"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
self-replace = "1.5"
sha2 = "0.10"
tempfile = "3.20"
ureq = "3.0"
vt100 = "0.16"
zip = { version = "6.0", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.build-dependencies]
ico = "0.5"
resvg = "0.45"
winresource = "0.1"
